Add basic endpoint skeletons for transactions
